--- a/.gitignore
+++ b/.gitignore
@@ -50,4 +50,6 @@ config.local.neon
 .idea
 www/subdom/t9
 www/subdom/photo/albums
+www/subdom/member/doc
 www/subdom/member/img/portrets
+www/subdom/member/texyla/temp
