disable version control of zip archive

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ config.local.neon
 .idea
 www/subdom/t9
 www/subdom/photo/albums
+www/subdom/member/archive.zip
 www/subdom/member/doc
 www/subdom/member/img/portrets
 www/subdom/member/texyla/temp
