HTTP auth HTTPS support

--- a/www/subdom/member/.htaccess
+++ b/www/subdom/member/.htaccess
@@ -6,6 +6,9 @@ Options -Indexes
 	RewriteEngine On
 	# RewriteBase /
 
+	RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+	
 	# front controller
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
