Cron services is now in dedicated in Cron presenter Google API client and Google API services has now config in config.neon

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -67,6 +67,22 @@ services:
 	- App\Model\GalleryService(@database.photogalery.context)
 	- App\Model\WordpressService(@database.wordpress.context)
 
+	googleClient:
+		factory: Google_Client
+		setup:
+			- setAuthConfig('%appDir%/config/google_api_service.json')
+			- setSubject(%google.account%)
+			- setScopes([
+				Google_Service_Drive::DRIVE_READONLY
+				Google_Service_Calendar::CALENDAR
+				Google_Service_People::CONTACTS
+			])
+			- setCache(Stash\Pool(Stash\Driver\FileSystem()))
+
+	- Google_Service_Drive
+	- Google_Service_Calendar
+	- Google_Service_People
+
 extensions:
 	console: Kdyby\Console\DI\ConsoleExtension
 	- WebChemistry\Forms\Controls\DI\MultiplierExtension
