--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
 		"joseki/webloader-filters": "^1.1",
 		"echo511/plupload": "^2.1",
 		"lsolesen/pel": "^0.9.6",
-		"tedivm/stash": "^0.14.2"
+		"tedivm/stash": "^0.14.2",
+		"rah/danpu": "^2.6"
 	},
 	"require-dev": {
 		"nette/tester": "^1.6"
