--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,4 +11,4 @@ pipelines:
         script:
           - apt-get update
           - apt-get -qq install git-ftp
-          - git ftp init --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftsp://117041.w41.wedos.net
+          - git ftp init --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftps://117041.w41.wedos.net
