--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,11 +6,27 @@
 image: samueldebruyn/debian-git
 
 pipelines:
-  default:
-    - step:
-        script:
-          - apt-get update
-          - apt-get -qq install git-ftp
-          - git ftp push --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftpes://117041.w41.wedos.net
-#          - apt-get -qq install lftp
-#          - lftp -e 'rm -r /tmp/cache; quit' -u $FTP_USER_TEST,$FTP_PASSWD_TEST ftp://117041.w41.wedos.net
+  custom:
+    deploy_to_production:
+      - step:
+          script:
+            - apt-get update
+            - apt-get -qq install git-ftp
+            - git ftp push --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftpes://117041.w41.wedos.net
+            - apt-get -qq install lftp
+            - mkdir ~/.lftp
+            - touch ~/.lftp/rc
+            - echo -n "set ssl:verify-certificate no" > ~/.lftp/rc
+            - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST 117041.w41.wedos.net
+            
+    deploy_to_testing:
+      - step:
+          script:
+            - apt-get update
+            - apt-get -qq install git-ftp
+            - git ftp push --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftpes://117041.w41.wedos.net
+            - apt-get -qq install lftp
+            - mkdir ~/.lftp
+            - touch ~/.lftp/rc
+            - echo -n "set ssl:verify-certificate no" > ~/.lftp/rc
+            - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST 117041.w41.wedos.net
