--- a/www/.htaccess
+++ b/www/.htaccess
@@ -1,6 +1,10 @@
 # disable directory listing
 Options -Indexes
 
+<ifModule mod_headers.c>
+	Header set Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-inline'; connect-src 'self'; img-src *; style-src 'self' 'unsafe-inline'; font-src 'self'"
+</ifModule>
+
 # enable cool URL
 RewriteEngine On
 
