--- a/www/.htaccess
+++ b/www/.htaccess
@@ -2,7 +2,7 @@
 Options -Indexes
 
 <ifModule mod_headers.c>
-	Header set Content-Security-Policy "default-src 'none'; script-src 'self' 'unsafe-inline'; connect-src 'self'; img-src *; style-src 'self' 'unsafe-inline'; font-src 'self'"
+	Header set Content-Security-Policy "script-src 'self' 'unsafe-inline'; connect-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self'"
 </ifModule>
 
 # enable cool URL
