--- a/www/subdom/photo/.htaccess
+++ b/www/subdom/photo/.htaccess
@@ -17,5 +17,5 @@ AddDefaultCharset utf-8
 
 # enable gzip compression
 <IfModule mod_deflate.c>
-	AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/x-javascript text/javascript application/javascript application/json
+	AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/x-javascript text/javascript application/javascript application/json image/svg+xml
 </IfModule>
