Set session to start every time

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -47,7 +47,7 @@ php:
 	zlib.output_compression: yes
 
 session:
-    autoStart: smart
+    autoStart: true
     savePath: "%tempDir%/../session"
     gc_maxlifetime: 21600
 
