Rework of mail presenter, you can now send HTML mails + begin of new message system + new table to store messages

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -65,6 +65,7 @@ services:
 	- App\Model\AnketyService
 	- App\Model\RatingService
 	- App\Model\TimesService
+	- App\Model\MessageService
 	- App\Model\HlasovaniService
 	- App\Model\GalleryService(@database.photo.context)
 	- App\Model\WordpressService(@database.wordpress.context)
