--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
 		"nette/utils": "^2.4",
 		"latte/latte": "^2.4",
 		"tracy/tracy": "^2.4",
-		"kdyby/console": "^2.6",
 		"texy/texy": "^2.9",
 		"google/apiclient": "^2.1",
 		"janmarek/webloader": "^2.5",
@@ -29,7 +28,8 @@
 		"echo511/plupload": "^2.1",
 		"lsolesen/pel": "^0.9.6",
 		"tedivm/stash": "^0.14.2",
-		"rah/danpu": "^2.6"
+		"rah/danpu": "^2.6",
+		"contributte/console": "^0.2.0"
 	},
 	"require-dev": {
 		"nette/tester": "^1.6"
