Rename "memberService" to "userService" and add userLevel parametr to most related getUser... fuction to filter user by their role level

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -58,7 +58,7 @@ services:
 
 	- App\Model\AkceService
 	- App\Model\ForumService
-	- App\Model\MemberService
+	- App\Model\UserService
 	- App\Model\DokumentyService
 	- App\Model\AnketyService
 	- App\Model\RatingService
