Remove config.local.neon-production from .gitignore file. Passwords and secrets in file are not valid

--- a/.gitignore
+++ b/.gitignore
@@ -48,13 +48,12 @@ session/
 log/
 vendor/
 config.local.neon
-config.local.neon.production
 google_api_service.json
 composer.lock
 .idea
-www/subdom/t9
-www/subdom/photo/albums
+www/subdom/t9/
+www/subdom/photo/albums/
 www/subdom/member/archive.zip
-www/subdom/member/doc
-www/subdom/member/img/portrets
-www/subdom/member/texyla/temp
+www/subdom/member/doc/
+www/subdom/member/img/portrets/
+www/subdom/member/texyla/temp/
