Added cron presenter to sync contact with google account

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -87,13 +87,13 @@ services:
 			- setScopes([
 				Google_Service_Drive::DRIVE_READONLY
 				Google_Service_Calendar::CALENDAR
-				Google_Service_People::CONTACTS
+				Google_Service_PeopleService::CONTACTS
 			])
 			- setCache(Stash\Pool(Stash\Driver\FileSystem([path: "%tempDir%/stash"])))
 
 	- Google_Service_Drive
 	- Google_Service_Calendar
-	- Google_Service_People
+	- Google_Service_PeopleService
 
 	googleLogin:
 		class: Vencax\GoogleLogin(%google.login%, "vzsjablonec-social-login")
