UserFormFactory class for user personal data form

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -68,6 +68,8 @@ services:
 	- App\Authenticator\CredentialsAuthenticator
 	- App\Authenticator\EmailAuthenticator
 
+	- App\MemberModule\Forms\UserFormFactory
+
 	- App\Model\AkceService
 	- App\Model\ForumService
 	- App\Model\UserService
