--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -33,3 +33,27 @@ pipelines:
             - echo -n "set ssl:verify-certificate no" > ~/.lftp/rc
             - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST $FTP_SERVER_TEST
             - echo "Testing server updated"
+  custom:
+      init_production:
+        - step:
+            script:
+              - apt-get update
+              - apt-get -qq install git-ftp
+              - git ftp init --user $FTP_USER --passwd $FTP_PASSWD ftpes://$FTP_SERVER
+              - apt-get -qq install lftp
+              - mkdir ~/.lftp
+              - touch ~/.lftp/rc
+              - echo -n "set ssl:verify-certificate no" > ~/.lftp/rc
+              - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER,$FTP_PASSWD $FTP_SERVER
+
+      init_testing:
+        - step:
+            script:
+              - apt-get update
+              - apt-get -qq install git-ftp
+              - git ftp init --user $FTP_USER_TEST --passwd $FTP_PASSWD_TEST ftpes://$FTP_SERVER_TEST
+              - apt-get -qq install lftp
+              - mkdir ~/.lftp
+              - touch ~/.lftp/rc
+              - echo -n "set ssl:verify-certificate no" > ~/.lftp/rc
+              - lftp -e 'rm -r /tmp/cache; mkdir -p /tmp/cache; bye' -u $FTP_USER_TEST,$FTP_PASSWD_TEST $FTP_SERVER_TEST
