--- a/www/subdom/photo/.htaccess
+++ b/www/subdom/photo/.htaccess
@@ -19,3 +19,6 @@ AddDefaultCharset utf-8
 <IfModule mod_deflate.c>
 	AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/x-javascript text/javascript application/javascript application/json image/svg+xml
 </IfModule>
+
+# Prevent browsers from incorrectly detecting non-scripts as scripts
+X-Content-Type-Options: nosniff
