--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -124,10 +124,8 @@ services:
 		setup:
 			- setScope([Vencax\FacebookLogin::EMAIL])
 
-	iDoklad:
+	idoklad:
 	    class: malcanek\iDoklad\iDoklad(%idoklad.id%, %idoklad.sc%, 'http://localhost/vzsjablonec/member/user')
-
-	- malcanek\iDoklad\request\iDokladRequest
 
 extensions:
 	- WebChemistry\Forms\Controls\DI\MultiplierExtension
