Parameters renamed and added to config.neon

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -30,6 +30,10 @@ parameters:
 			appSecret: 987654321
 			callbackURL: http://localhost/vzsjablonec/member/sign/facebooklogin
 			defaultFbGraphVersion: 'v2.11'
+	idoklad:
+			clientId: 12345678-abcd-efgh-ijkl-098765432100
+			clientSecret: 98765432-lkji-hgfe-dcba-001234567890
+			redirectUri: ''
 
 application:
 	errorPresenter: Error
@@ -124,8 +128,7 @@ services:
 		setup:
 			- setScope([Vencax\FacebookLogin::EMAIL])
 
-	idoklad:
-	    class: malcanek\iDoklad\iDoklad(%idoklad.id%, %idoklad.sc%, 'http://localhost/vzsjablonec/member/user')
+	idoklad: malcanek\iDoklad\iDoklad(%idoklad.clientId%, %idoklad.clientSecret%, %idoklad.redirectUri%)
 
 extensions:
 	- WebChemistry\Forms\Controls\DI\MultiplierExtension
