No need for stacify servise, thanks to autowire

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -92,7 +92,7 @@ services:
 	- App\Model\AkceService
 	- App\Model\ForumService
 	- App\Model\UserService
-	- App\Model\DokumentyService(@database.default.context, %google.driveDir%)
+	- App\Model\DokumentyService(%google.driveDir%)
 	- App\Model\AnketyService
 	- App\Model\RatingService
 	- App\Model\MessageService
