--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -18,6 +18,8 @@ parameters:
 			dbname: wordpress
 			user: root
 			password:
+	sso:
+		secret: gC4kWZXJxqLAEB0afYqmcgAp1WVemzfpSfSdfZVr
 	google:
 		account: info@vzs-jablonec.cz
 		driveDir: olqBGlusVSO2QWsuaOq0WpazaQqK
@@ -89,7 +91,7 @@ services:
 		setup:
 			- addFilter(null, App\Template\LatteFilters::loader)
 
-	- App\Authenticator\SsoAuthenticator
+	- App\Authenticator\SsoAuthenticator(%sso.secret%)
 	- App\Authenticator\CredentialsAuthenticator
 	- App\Authenticator\EmailAuthenticator
 	- App\SignModule\StateCryptor({google: %google.login%, facebook: %facebook.login%})
