--- a/www/subdom/photo/.htaccess
+++ b/www/subdom/photo/.htaccess
@@ -9,7 +9,7 @@ Options -Indexes
 	# front controller
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteRule !\.(pdf|js|ico|gif|jpg|png|css|rar|zip|tar\.gz)$ index.php [L]
+	RewriteRule !\.(pdf|js|ico|gif|jpg|svg|png|css|rar|zip|tar\.gz)$ index.php [L]
 </IfModule>
 
 # default charset should be UTF-8
