Remove constriction on forms

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -80,7 +80,7 @@ http:
 			- self
 			- nonce
 		frame-ancestors: none
-		form-action: self
+#		form-action: self
 		style-src:
 			- self
 			- unsafe-inline
