Image class for work with images, base on Imagic php extention which uses Image magic linux libraly

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"license": ["MIT", "BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
 	"require": {
 		"php": ">= 7.0",
+	  	"ext-imagick": "*",
 		"nette/application": "^2.4",
 		"nette/bootstrap": "^2.4.2",
 		"nette/caching": "^2.5",
